# django_blog

./: README.md  chsh.md  django_notes.md  pyproject.toml
blog_recipes/: manage.py
blog_recipes/blog/: admin.py  forms.py  models.py  urls.py  views.py
blog_recipes/blog/management/commands/: create_db_data.py
blog_recipes/blog/migrations/: 0001_initial.py
blog_recipes/blog/static/blog/css/: styles.css
blog_recipes/blog/templates/blog/: about.html  add_comment.html  add_recipe.html  base.html  change_recipe.html  choice_recipe_form.html  contact.html  delete_recipe.html  index.html  login.html  recipe.html  register.html  show_all_recipes.html  show_comments_recipe.html  show_recipe.html  user_recipes.html
blog_recipes/blog_recipes/: asgi.py  settings.py  urls.py  wsgi.py
myblog/: db.sqlite3  myblog_data.json
myblog/account/: forms.py  urls.py  views.py
myblog/account/templates/account/: login.html
myblog/account/templates/registration/: logged_out.html  login.html
myblog/blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
myblog/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py
myblog/blog/templates/blog/: base.html  pagination.html
myblog/blog/templates/blog/post/: comment.html  detail.html  list.html  search.html  share.html
myblog/blog/templates/static/css/: blog.css
myblog/blog/templatetags/: blog_tags.py
myblog/myblog/: settings.py  urls.py
myblog/templates/: base.html
