[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = "Blog using Django FrameWork"
authors = ["arletino <titkov@nxt.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-taggit = "^6.0.0"
markdown = "3.4.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
